force-app/main/default/objects/Workflow_DynamicColumns__c/Workflow_DynamicColumns__c.object-meta.xml
<CustomObject>
    <label>Workflow_DynamicColumns</label>
    <nameField>
        <displayFormat>WDC-{0000000}</displayFormat>
        <label>Workflow_DynamicColumns Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow_DynamicColumns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>