force-app/main/default/objects/Workflow_DynamicColumns__c/fields/ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>ColumnOrder__c</fullName>
    <label>ColumnOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>