force-app/main/default/objects/Workflow_DynamicColumns__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>DataType</label>
    <type>TextArea</type>
</CustomField>