force-app/main/default/objects/Workflow_DynamicColumns__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>