force-app/main/default/objects/Workflow_DynamicColumns__c/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <label>Page Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>